--- DREK ---


Version 3.2.8n (in progress)
* [Fixed] HTML errors/warnings.
* [Fixed] PHP 8 errors/warnings.
* [Changed] Pages will now display error message if javascript is disabled.
* [Added] GDPR compliance.
* [Fixed] Broken quick login.
* [Changed] Version string to indicate "nightly" status of current working version.
* [Added] Reset button next to the search field on the Players page.
* [Fixed] Search string length limited to 50 characters.
* [Fixed] CSRF protection.
* [Added] Credits page.